...
                              label: Padding(
                                padding: const EdgeInsets.only(
                                  top: 10,
                                  bottom: 10,
                                ),
                                child: Text(
                                  "Sign up",
                                  style: TextStyle(
                                    color: Colors.white,
                                    fontSize: 16,
                                  ),
                                ),
                              ),
...
                                      )
                                      : null,
                            ),
                          ),

                          Row(
                            key: const ValueKey('login_link'),
                            mainAxisAlignment: MainAxisAlignment.center,
                            children: [
                              Text("Already have an account ?"),
                              TextButton(
                                onPressed: handleGoLogin,
                                child: Text(
...
