...
class _HomeState extends State<Home> {
  final AuthController _authControllerInstance = Get.put(AuthController());
  late PageController _pageController;
  int _currentTabIndex = 0;

  final Map<int, Widget> _tabScreens = {
    0: Shop(title: "Shop"),
    1: Wishlist(),
    2: CardByUser(),
    3: DashBoard(),
  };

  final List<BottomNavigationBarItem> _bottomNavItems = const [
...
